Fix bg color not showing under ios status bar

--- a/web/app/globals.css
+++ b/web/app/globals.css
@@ -20,7 +20,12 @@ main {
   color: rgb(var(--foreground-rgb));
 }
 
-.background {
+html {
+  height: 100%;
+}
+
+body {
+  height: 100%;
   background: linear-gradient(
       to bottom,
       transparent,
